sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:4: error: '(' expected but identifier found.
    for k(<i-1 to 0){
        ^AlgInsertionSort:9: error: illegal start of simple expression
  } 
  ^